--- a/src/styles/routes/resort.css
+++ b/src/styles/routes/resort.css
@@ -1,3 +1,5 @@
+/* Styles for the resort page */
+
 /* Main container for the resort page */
 .resortContainer {
     display: grid; /* Grid layout for organizing sections */
@@ -169,37 +171,45 @@
 
 /* Dark mode styles */
 @media (prefers-color-scheme: dark) {
+    /* Dark mode styles for the resort container */
     .resortContainer {
         background-color: #141414; /* Dark background */
     }
 
+    /* Dark mode styles for the text sections */
     .resortText {
         color: #ededed; /* Light text color */
     }
 
+    /* Dark mode styles for the background section */
     .resortBackground {
         background-image: url('../assets/resortBackgroundImgDark.jpg'); /* Dark mode background */
         background-position: center; /* Center the background image */
     }
 
+    /* Dark mode styles for the title */
     .resortTitle {
         color: #ededeb; /* Light text color */
     }
 
+    /* Dark mode styles for the search bar */
     .resortBackground::after {
         background: linear-gradient(to bottom, rgba(20, 20, 20, 0) 0%, rgba(20, 20, 20, 1) 100%);
     }
 
+    /* Dark mode styles for the search bar text input */
     .searchButton {
         border: 2px solid #ededeb; /* Light border */
         background-color: #141414; /* Dark background */
         color: #ededeb; /* Light text color */
     }
 
+    /* Dark mode styles for the main content container */
     .resortContentContainer {
         color: #ededeb; /* Light text color */
     }
 
+    /* Dark mode styles for the "More Resorts" button */
     .moreResorts {
         margin-top: 2vh; /* Adjusted top margin */
         border: 1px solid #ededeb; /* Light border */
